@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.ccd.sdk.ConfigBuilderImpl;
 import uk.gov.hmcts.ccd.sdk.api.CaseDetails;
@@ -12,15 +13,22 @@ import uk.gov.hmcts.ccd.sdk.api.callback.AboutToStartOrSubmitResponse;
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 import uk.gov.hmcts.sptribs.caseworker.model.CaseStay;
 import uk.gov.hmcts.sptribs.caseworker.model.StayReason;
+import uk.gov.hmcts.sptribs.ciccase.model.ApplicantCIC;
 import uk.gov.hmcts.sptribs.ciccase.model.CaseData;
 import uk.gov.hmcts.sptribs.ciccase.model.CicCase;
+import uk.gov.hmcts.sptribs.ciccase.model.RepresentativeCIC;
 import uk.gov.hmcts.sptribs.ciccase.model.State;
+import uk.gov.hmcts.sptribs.ciccase.model.SubjectCIC;
 import uk.gov.hmcts.sptribs.ciccase.model.UserRole;
+import uk.gov.hmcts.sptribs.common.notification.CaseStayedNotification;
 
 import java.time.LocalDate;
-import java.util.Collections;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
 import static uk.gov.hmcts.sptribs.caseworker.event.CaseworkerStayTheCase.CASEWORKER_STAY_THE_CASE;
 import static uk.gov.hmcts.sptribs.testutil.ConfigTestUtil.createCaseDataConfigBuilder;
 import static uk.gov.hmcts.sptribs.testutil.ConfigTestUtil.getEventsFrom;
@@ -33,6 +41,9 @@ class CaseworkerStayTheCaseTest {
 
     @InjectMocks
     private CaseworkerStayTheCase caseworkerStayTheCase;
+
+    @Mock
+    private CaseStayedNotification caseStayedNotification;
 
     @Test
     void shouldAddConfigurationToConfigBuilder() {
@@ -53,9 +64,9 @@ class CaseworkerStayTheCaseTest {
         //Given
         final CaseData caseData = caseData();
         CicCase cicCase = new CicCase();
-        cicCase.setSubjectCIC(Collections.emptySet());
-        cicCase.setApplicantCIC(Collections.emptySet());
-        cicCase.setRepresentativeCIC(Collections.emptySet());
+        cicCase.setSubjectCIC(Set.of(SubjectCIC.SUBJECT));
+        cicCase.setApplicantCIC(Set.of(ApplicantCIC.APPLICANT_CIC));
+        cicCase.setRepresentativeCIC(Set.of(RepresentativeCIC.REPRESENTATIVE));
         caseData.setCicCase(cicCase);
         caseData.setNote("This is a test note");
         CaseStay caseStay = new CaseStay();
@@ -71,6 +82,10 @@ class CaseworkerStayTheCaseTest {
         updatedCaseDetails.setCreatedDate(LOCAL_DATE_TIME);
 
         //When
+        doNothing().when(caseStayedNotification).sendToSubject(any(CaseData.class), eq(null));
+        doNothing().when(caseStayedNotification).sendToApplicant(any(CaseData.class), eq(null));
+        doNothing().when(caseStayedNotification).sendToRepresentative(any(CaseData.class), eq(null));
+
         AboutToStartOrSubmitResponse<CaseData, State> response =
             caseworkerStayTheCase.aboutToSubmit(updatedCaseDetails, beforeDetails);
         SubmittedCallbackResponse stayedResponse = caseworkerStayTheCase.stayed(updatedCaseDetails, beforeDetails);
